# ToyPT

./: CMakeLists.txt  README.md  main.cpp
include/application/: application.h  renderthread.h
include/math/: algorithms.h  avx2coordinatepack.h  matrix3d.h  matrix4x4.h  simdvector3pack.h  vector3d.h  vector4.h
include/math/simd/: vector3pack.h
include/rendering/: abstractmesh.h  abstractrenderer.h  color.h  cube.h  framebuffer.h  geometrycontainer.h  kdtreebuilder.h  material.h  mesh.h  openclrenderer.h  pointlight.h  randomnumbergenerator.h  ray.h  renderer.h  rendersettings.h  shader.h  simdrenderer.h  simdtypes.h  square.h  storage.h  tile.h  triangle.h
include/rendering/cuda/: cudaarray.h  cudaarrayprivate.h  cudakdtree.h  cudarenderer.h  cudatypes.h  kernelwrapper.h
include/rendering/opencl/: openclrenderer.h
include/rendering/simd/: kdtree.h  simdrenderer.h
include/utility/: debugstream.h  globals.h
src/application/: CMakeLists.txt  application.cpp  main.cpp  renderthread.cpp
src/math/: algorithms.cpp  matrix3d.cpp  matrix4x4.cpp  vector3d.cpp
src/rendering/: CMakeLists.txt  abstractmesh.cpp  abstractrenderer.cpp  color.cpp  cube.cpp  framebuffer.cpp  geometrycontainer.cpp  kdtreebuilder.cpp  material.cpp  mesh.cpp  openclrenderer.cpp  pointlight.cpp  randomnumbergenerator.cpp  renderer.cpp  simdrenderer.cpp  simdtypes.cpp  square.cpp  storage.cpp  triangle.cpp
src/rendering/cuda/: cudaarrayprivate.cu  cudarenderer.cpp  cudarendererprivate.cu  kernel.cu  kernelwrapper.cpp
src/rendering/kernels/: kernel.cl
src/rendering/opencl/: openclrenderer.cpp
src/rendering/simd/: kdtree.cpp  simdrenderer.cpp
src/utility/: debugstream.cpp
